--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-
-</body>
+    <body>
+        <h1>Ahoj kamarat ktorosanF ABDGLKJ</h1>
+    </body>
 </html>
