--- a/index.html
+++ b/index.html
@@ -4,51 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Exam</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="app/css/footer.css">
     <link rel="stylesheet" href="app/css/header.css">
     <link rel="stylesheet" href="app/css/index.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="app/css/layout.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-        </ul>
-    </div>
-</nav>
+<article class="container">
 
+    <section class="thumbnail-container">
+        <div class="thumbnail-container-game">
+            <div class="gamepad-background thumbnail-container-background">
+                <span class="thumbnail-container-title">Záhada stratenéj <br> perly</span>
+                <img class="thumbnail-container-image gamepad-image" src="./app/assets/images/gamepad.png"
+                     alt="Thumbnail gamepad">
+                <span class="thumbnail-container-name">Michal <span class="font-weight-bold">Palenčár</span> </span>
+            </div>
 
+        </div>
+        <div class="thumbnail-container-game">
+            <div class="bomb-background thumbnail-container-background">
+                <span class="thumbnail-container-title">Vojna dvoch <br>trpaslíkov</span>
+                <img class="thumbnail-container-image bomb-image" src="./app/assets/images/bomb.png"
+                     alt="Thumbnail bomb">
+                <span class="thumbnail-container-name">Matej <span class="font-weight-bold">Peluha</span> </span>
 
+            </div>
+        </div>
+        <div class="thumbnail-container-game">
+            <div class="robot-background thumbnail-container-background">
+                <span class="thumbnail-container-title">Dobrodružstvá v <br>džungli</span>
+                <img class="thumbnail-container-image robot-image" src="./app/assets/images/robot.png"
+                     alt="Thumbnail robot">
+                <span class="thumbnail-container-name">Ľuboš <span class="font-weight-bold">Sremaňák</span> </span>
+            </div>
+        </div>
 
+        <div class="thumbnail-container-game">
+            <div class="cup-background thumbnail-container-background ">
+                <span class="thumbnail-container-title">Štyria tankisti a<br> pes</span>
+                <img class="thumbnail-container-image cup-image" src="./app/assets/images/cup.png" alt="Thumbnail cup">
+                <span class="thumbnail-container-name">Kristian <span class="font-weight-bold">Sokol</span> </span>
+            </div>
+        </div>
 
+        <div class="thumbnail-container-event">
+            <div class="attendance-background thumbnail-container-background ">
+                <span class="thumbnail-container-event-title">
+                  Túto stránku si za posledný <span class="font-weight-bold">mesiac </span>navštívil</span>
+            </div>
+        </div>
+        <div class="thumbnail-container-event">
+            <div class="date-background thumbnail-container-background ">
+                <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
+            </div>
+        </div>
+
+    </section>
+</article>
 </body>
 </html>
