Fixed layout.css, removed redundant div layer in index.html.

--- a/index.html
+++ b/index.html
@@ -62,59 +62,50 @@
     </div>
 </nav>
 
-<article class="container">
 
-    <section class="thumbnail-container">
-        <div class="thumbnail-container-game">
-            <div class="gamepad-background thumbnail-container-background">
-                <span class="thumbnail-container-title">Záhada stratenéj <br> perly</span>
-                <img class="thumbnail-container-image gamepad-image" src="./app/assets/images/gamepad.png"
-                     alt="Thumbnail gamepad">
-                <span class="thumbnail-container-name">Michal <span class="font-weight-bold">Palenčár</span> </span>
-            </div>
+<article class="thumbnail-container">
+    <div class="thumbnail-container-game gamepad-background thumbnail-container-background">
 
-        </div>
-        <div class="thumbnail-container-game">
-            <div class="bomb-background thumbnail-container-background">
-                <span class="thumbnail-container-title">Vojna dvoch <br>trpaslíkov</span>
-                <img class="thumbnail-container-image bomb-image" src="./app/assets/images/bomb.png"
-                     alt="Thumbnail bomb">
-                <span class="thumbnail-container-name">Matej <span class="font-weight-bold">Peluha</span> </span>
-            </div>
-        </div>
-        <div class="thumbnail-container-game">
-            <div class="robot-background thumbnail-container-background">
-                <span class="thumbnail-container-title">Dobrodružstvá v <br>džungli</span>
-                <img class="thumbnail-container-image robot-image" src="./app/assets/images/robot.png"
-                     alt="Thumbnail robot">
-                <span class="thumbnail-container-name">Ľuboš <span
-                        class="font-weight-bold">Sremaňák</span> </span>
-            </div>
-        </div>
+        <span class="thumbnail-container-title">Záhada stratenéj perly</span>
+        <img class="thumbnail-container-image gamepad-image" src="./app/assets/images/gamepad.png"
+             alt="Thumbnail gamepad">
+        <span class="thumbnail-container-name">Michal <span class="font-weight-bold">Palenčár</span> </span>
+    </div>
+    <div class="thumbnail-container-game bomb-background thumbnail-container-background">
 
-        <div class="thumbnail-container-game">
-            <div class="cup-background thumbnail-container-background ">
-                <span class="thumbnail-container-title">Štyria tankisti a<br> pes</span>
-                <img class="thumbnail-container-image cup-image" src="./app/assets/images/cup.png"
-                     alt="Thumbnail cup">
-                <span class="thumbnail-container-name">Kristian <span
-                        class="font-weight-bold">Sokol</span> </span>
-            </div>
-        </div>
+        <span class="thumbnail-container-title">Vojna dvoch trpaslíkov</span>
+        <img class="thumbnail-container-image bomb-image" src="./app/assets/images/bomb.png"
+             alt="Thumbnail bomb">
+        <span class="thumbnail-container-name">Matej <span class="font-weight-bold">Peluha</span> </span>
 
-        <div class="thumbnail-container-event">
-            <div class="attendance-background thumbnail-container-background ">
+    </div>
+    <div class="thumbnail-container-game robot-background thumbnail-container-background">
+        <span class="thumbnail-container-title ">Dobrodružstvá v džungli</span>
+        <img class="thumbnail-container-image robot-image" src="./app/assets/images/robot.png"
+             alt="Thumbnail robot">
+        <span class="thumbnail-container-name">Ľuboš <span
+                class="font-weight-bold">Sremaňák</span> </span>
+    </div>
+
+    <div class="thumbnail-container-game cup-background thumbnail-container-background ">
+
+        <span class="thumbnail-container-title">Štyria tankisti a pes</span>
+        <img class="thumbnail-container-image cup-image" src="./app/assets/images/cup.png"
+             alt="Thumbnail cup">
+        <span class="thumbnail-container-name">Kristian <span
+                class="font-weight-bold">Sokol</span> </span>
+    </div>
+
+    <div class="thumbnail-container-event attendance-background thumbnail-container-background ">
+
                 <span class="thumbnail-container-event-title">
                   Túto stránku si za posledný <span class="font-weight-bold">mesiac </span>navštívil</span>
-            </div>
-        </div>
-        <div class="thumbnail-container-event">
-            <div class="date-background thumbnail-container-background ">
-                <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
-            </div>
-        </div>
 
-    </section>
+    </div>
+    <div class="thumbnail-container-event date-background thumbnail-container-background ">
+
+        <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
+    </div>
 </article>
 </body>
 </html>
