--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <article class="thumbnail-container">
     <div class="thumbnail-container-game gamepad-background thumbnail-container-background">
 
-        <span class="thumbnail-container-title">Záhada stratenéj perly</span>
+        <span class="thumbnail-container-title">Záhada stratenej perly</span>
         <img class="thumbnail-container-image gamepad-image" src="./app/assets/images/gamepad.png"
              alt="Thumbnail gamepad">
         <span class="thumbnail-container-name">Michal <span class="font-weight-bold">Palenčár</span> </span>
@@ -84,22 +84,22 @@
         <img class="thumbnail-container-image robot-image" src="./app/assets/images/robot.png"
              alt="Thumbnail robot">
         <span class="thumbnail-container-name">Ľuboš <span
-                class="font-weight-bold">Sremaňák</span> </span>
+                class="bold-max">Sremaňák</span> </span>
     </div>
 
     <div class="thumbnail-container-game cup-background thumbnail-container-background ">
 
-        <span class="thumbnail-container-title">Štyria tankisti a pes</span>
+        <span class="thumbnail-container-title ">Štyri cigančata a peso</span>
         <img class="thumbnail-container-image cup-image" src="./app/assets/images/cup.png"
              alt="Thumbnail cup">
         <span class="thumbnail-container-name">Kristian <span
-                class="font-weight-bold">Sokol</span> </span>
+                class="bold-max">Sokol</span> </span>
     </div>
 
     <div class="thumbnail-container-event attendance-background thumbnail-container-background ">
 
                 <span class="thumbnail-container-event-title">
-                  Túto stránku si za posledný <span class="font-weight-bold">mesiac </span>navštívil</span>
+                  Túto stránku si za posledný <span class="bold-max">mesiac </span>navštívil</span>
 
     </div>
     <div class="thumbnail-container-event date-background thumbnail-container-background ">
