Almost final navigation bar.

--- a/index.html
+++ b/index.html
@@ -28,38 +28,16 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light navbar-text">
-    <button class="navbar-toggler text-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item item-active">
-                <a class="nav-link" href="#">Domov<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">O nás</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Hry</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Škola
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-        </ul>
-    </div>
+<nav class="navigation-bar">
+
+    <ul class="navigation-bar-row">
+        <li class="item item-active"><a class="item-link" href="#">Domov</a></li>
+        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
+        <li class="item"><a class="item-link" href="#">Hry</a></li>
+        <li class="item"><a class="item-link" href="#">Škola</a></li>
+    </ul>
 </nav>
 
 
@@ -107,5 +85,6 @@
         <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
     </div>
 </article>
+
 </body>
 </html>
