Zmenena hlavná sekcia na section.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </nav>
 
 
-<article class="thumbnail-container">
+<section class="thumbnail-container">
     <div class="thumbnail-container-game gamepad-background thumbnail-container-background"
          onclick="changeView('./palencar/html/game.html')">
 
@@ -92,7 +92,7 @@
          onclick="changeView('./app/-component/attendance.html')">
         <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
     </div>
-</article>
+</section>
 
 </body>
 </html>
