--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Exam</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="app/css/footer.css">
-    <link rel="stylesheet" href="app/css/header.css">
-    <link rel="stylesheet" href="app/css/index.css">
-    <link rel="stylesheet" href="app/css/layout.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    <link href="style.css" rel="stylesheet">
+    <link href="app/css/footer.css" rel="stylesheet">
+    <link href="app/css/header.css" rel="stylesheet">
+    <link href="app/css/index.css" rel="stylesheet">
+    <link href="app/css/layout.css" rel="stylesheet">
+    <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script crossorigin="anonymous"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script crossorigin="anonymous"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="app/js/index.js"></script>
 
 
@@ -47,8 +47,8 @@
          onclick="changeView('./palencar/html/game.html')">
 
         <span class="thumbnail-container-title">Záhada stratenej perly</span>
-        <img class="thumbnail-container-image gamepad-image" src="./app/assets/images/gamepad.png"
-             alt="Thumbnail gamepad">
+        <img alt="Thumbnail gamepad" class="thumbnail-container-image gamepad-image"
+             src="./app/assets/images/gamepad.png">
         <span class="thumbnail-container-name">Michal <span class="font-weight-bold">Palenčár</span> </span>
     </div>
     <div class="thumbnail-container-game bomb-background thumbnail-container-background"
@@ -56,8 +56,8 @@
 
         <span class=" thumbnail-container-title
     ">Vojna dvoch trpaslíkov</span>
-        <img class="thumbnail-container-image bomb-image" src="./app/assets/images/bomb.png"
-             alt="Thumbnail bomb">
+        <img alt="Thumbnail bomb" class="thumbnail-container-image bomb-image"
+             src="./app/assets/images/bomb.png">
         <span class="thumbnail-container-name">Matej <span class="font-weight-bold">Peluha</span> </span>
 
     </div>
@@ -65,8 +65,8 @@
     <div class="thumbnail-container-game robot-background thumbnail-container-background "
          onclick="changeView('./sremanak/html/game.html')">
         <span class="thumbnail-container-title ">Dobrodružstvá v džungli</span>
-        <img class="thumbnail-container-image robot-image" src="./app/assets/images/robot.png"
-             alt="Thumbnail robot">
+        <img alt="Thumbnail robot" class="thumbnail-container-image robot-image"
+             src="./app/assets/images/robot.png">
         <span class="thumbnail-container-name">Ľuboš <span
                 class="bold-max">Sremaňák</span> </span>
     </div>
@@ -76,8 +76,8 @@
 
         <span class=" thumbnail-container-title
     ">Štyri cigančata a peso</span>
-        <img class="thumbnail-container-image cup-image" src="./app/assets/images/cup.png"
-             alt="Thumbnail cup">
+        <img alt="Thumbnail cup" class="thumbnail-container-image cup-image"
+             src="./app/assets/images/cup.png">
         <span class="thumbnail-container-name">Kristian <span
                 class="bold-max">Sokol</span> </span>
     </div>
