Pridaná hlavička do všetkých game.html.

--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Hra</title>
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../app/css/header.css">
+
+
 </head>
 <body>
+<nav class="navigation-bar">
 
+    <ul class="navigation-bar-row">
+        <li class="item item-active"><a class="item-link" href="#">Domov</a></li>
+        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
+        <li class="item"><a class="item-link" href="#">Hry</a></li>
+        <li class="item"><a class="item-link" href="#">Škola</a></li>
+    </ul>
+</nav>
 </body>
 </html>
