--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hra</title>
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../app/css/header.css">
+
+
 </head>
 <body>
+<nav class="navigation-bar">
 
+    <ul class="navigation-bar-row">
+        <li class="item item-active"><a class="item-link" href="#">Domov</a></li>
+        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
+        <li class="item"><a class="item-link" href="#">Hry</a></li>
+        <li class="item"><a class="item-link" href="#">Škola</a></li>
+    </ul>
+</nav>
 </body>
 </html>
