-Pridaný vzorový obrazok 1000x500.png. -Vytvorená class game-style.css, v ktoréj je celý spoločný layout a vizuál pre hru. -Vytvorená classa game.css v ktoréj sa nachádza samostatný vizuál každéj hry. -Premenovaný layout.css na home-layout.css. -Pridané farby pozadia do style.css a odstranenie default formátovania pre tlačidlá. -Auto refaktoring celého projektu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="app/css/footer.css" rel="stylesheet">
     <link href="app/css/header.css" rel="stylesheet">
     <link href="app/css/index.css" rel="stylesheet">
-    <link href="app/css/layout.css" rel="stylesheet">
+    <link href="app/css/home-layout.css" rel="stylesheet">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -30,7 +30,7 @@
 <nav class="navigation-bar">
 
     <ul class="navigation-bar-row">
-        <li class="item item-active"><a class="item-link" href="#">Domov</a></li>
+        <li class="item item-active"><a class="item-link" href="./index.html">Domov</a></li>
         <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
         <li class="item"><a class="item-link" href="#">Hry</a></li>
         <li class="item"><a class="item-link" href="#">Škola</a></li>
@@ -45,7 +45,7 @@
         <span class="thumbnail-container-title">Záhada stratenej perly</span>
         <img alt="Thumbnail gamepad" class="thumbnail-container-image gamepad-image"
              src="./app/assets/images/gamepad.png">
-        <span class="thumbnail-container-name">Michal <span class="font-weight-bold">Palenčár</span> </span>
+        <span class="thumbnail-container-name">Michal <span class="bold-max">Palenčár</span> </span>
     </div>
     <div class="thumbnail-container-game bomb-background thumbnail-container-background"
          onclick="changeView('./peluha/html/game.html')">
@@ -54,7 +54,7 @@
     ">Vojna dvoch trpaslíkov</span>
         <img alt="Thumbnail bomb" class="thumbnail-container-image bomb-image"
              src="./app/assets/images/bomb.png">
-        <span class="thumbnail-container-name">Matej <span class="font-weight-bold">Peluha</span> </span>
+        <span class="thumbnail-container-name">Matej <span class="bold-max">Peluha</span> </span>
 
     </div>
 
