--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -39,8 +39,8 @@
     </div>
 
 
-    <canvas id="game-canvas" class="game-container-canvas" width="1000" height="500">
-        <img id="game-image" alt="Game picture"  height="500"
+    <canvas class="game-container-canvas" height="500" id="game-canvas" width="1000">
+        <img alt="Game picture" height="500" id="game-image"
              src="../../app/assets/images/1000x500.png"
              width="1000">
     </canvas>
