--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -2,16 +2,16 @@
 <html lang="sk">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Hra</title>
+    <meta content="width=device-width, height=device-height initial-scale=1" name="viewport">
+    <title>My little pony</title>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
-    <script src="../js/game.js"></script>
 
+    <script src="../js/game.js"></script>
 
 </head>
 <body>
@@ -27,7 +27,7 @@
 
 <section class="game-container">
     <div class="game-container-info bomb-background">
-        <h1 class="game-container-info-title bold-max">Názov hry</h1>
+        <h1 class="game-container-info-title bold-max">My little pony</h1>
         <h2 class="game-container-info-name">Matej<span class="bold-max"> Peluha</span></h2>
     </div>
 
@@ -39,11 +39,80 @@
     </div>
 
 
-    <canvas class="game-container-canvas" height="500" id="game-canvas" width="1000">
-        <img alt="Game picture" height="500" id="game-image"
-             src="../../app/assets/images/1000x500.png"
-             width="1000">
-    </canvas>
+    <div class="game-container-canvas" id="game-canvas" >
+        <img alt="Game picture" id="game-image" src="../../app/assets/images/matejpeluha/my_little_pony.jpg" draggable="false">
+
+
+        <div id="pony08-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)">
+            <img id="pony08" class="pony" src="../../app/assets/images/matejpeluha/pony08.png"
+                 alt="pony08" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony09-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)">
+            <img id="pony09" class="pony" src="../../app/assets/images/matejpeluha/pony09.png"
+                 alt="pony09" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony07-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony07" class="pony" src="../../app/assets/images/matejpeluha/pony07.png"
+                 alt="pony07" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony06-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony06" class="pony" src="../../app/assets/images/matejpeluha/pony06.png"
+                 alt="pony06" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony05-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony05" class="pony" src="../../app/assets/images/matejpeluha/pony05.png"
+                 alt="pony05" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony04-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony04" class="pony" src="../../app/assets/images/matejpeluha/pony04.png"
+                 alt="pony04" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony03-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony03" class="pony" src="../../app/assets/images/matejpeluha/pony03.png"
+                 alt="pony03" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony02-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony02" class="pony" src="../../app/assets/images/matejpeluha/pony02.png"
+                 alt="pony02" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div id="pony01-container" class="pony-container"
+             ondrop="drop(event)" ondragover="allowDrop(event)" >
+            <img id="pony01" class="pony" src="../../app/assets/images/matejpeluha/pony01.png"
+                 alt="pony01" draggable="true" ondragstart="drag(event)" >
+        </div>
+    </div>
+
+
+    <section id="pony09-out-container" class="pony-out-container">
+
+    </section>
+
+    <section id="pony08-out-container" class="pony-out-container">
+
+    </section>
+    <section id="pony070605-out-container" class="pony-out-container">
+
+    </section>
+    <section id="pony040302-out-container" class="pony-out-container">
+
+    </section>
+    <section id="pony01-out-container" class="pony-out-container">
+
+    </section>
+
+
+
+
+
+
 </section>
 
 </body>
