--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -95,13 +95,15 @@
     <div id="pony09-out-container" class="pony-out-container"></div>
     <div id="allPony-out-container" class="pony-out-container"></div>
 
-
-
-
-
-
-
 </section>
+
+<div id="win-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Gratulujem ! Vyhral si !</p>
+        <p id="show-time">Čas:</p>
+    </div>
+</div>
 
 </body>
 </html>
