UPDATE: uprava modalu

--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -10,7 +10,7 @@
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
-
+    <link href="../css/modal.css" rel="stylesheet">
 
     <script src="../js/game.js"></script>
 
