--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -26,7 +26,7 @@
 </nav>
 
 
-<section class="game-container">
+<section id="game-container-id" class="game-container">
     <div class="game-container-info bomb-background">
         <h1 class="game-container-info-title bold-max">My little pony</h1>
         <h2 class="game-container-info-name">Matej<span class="bold-max"> Peluha</span></h2>
