--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -32,12 +32,15 @@
         <h2 class="game-container-info-name">Matej<span class="bold-max"> Peluha</span></h2>
     </div>
 
+    <span class="modal-content" id="wait-for-demo">Počkaj kým sa dokončí demo!</span>
+
     <div class="game-container-settings">
         <button class="game-container-settings-button" id="start">Štart</button>
         <button class="game-container-settings-button" id="stop">Stop</button>
         <button class="game-container-settings-button" id="demo">Demo</button>
         <span class="" id="time">00:00:00</span>
     </div>
+
 
 
     <div class="game-container-canvas" id="game-canvas" >
