UPDATE: create component

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <script crossorigin="anonymous"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="app/js/attendanceCounterComponent.js"></script>
     <script src="app/js/index.js"></script>
+
+
 
 
 </head>
@@ -78,12 +81,8 @@
                 class="bold-max">Sokol</span> </span>
     </div>
 
-    <div class="thumbnail-container-event attendance-background thumbnail-container-background "
-         onclick="changeView('./app/attendance-component/attendance.html')">
-        <span class=" thumbnail-container-event-title">
-    Túto stránku si za posledný <span class="bold-max">mesiac </span>navštívil</span>
+    <attendance-counter id="attendance-counter"></attendance-counter>
 
-    </div>
     <div class="thumbnail-container-event name-day-background thumbnail-container-background"
          onclick="changeView('./app/-component/attendance.html')">
         <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
