--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -10,6 +10,8 @@
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
+
+    <script src="../../app/js/attendanceCookiesHandler.js"></script>
     <script src="../js/game.js"></script>
 
 
