--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script crossorigin="anonymous"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <script src="app/js/nameDayFinderComponent.js"></script>
     <script src="app/js/index.js"></script>
 
 
@@ -84,6 +86,9 @@
     Túto stránku si za posledný <span class="bold-max">mesiac </span>navštívil</span>
 
     </div>
+
+    <nameday-finder></nameday-finder>
+
     <div class="thumbnail-container-event name-day-background thumbnail-container-background"
          onclick="changeView('./app/-component/attendance.html')">
         <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
