ADD: vytvorenie komponentu podla predlohy

--- a/index.html
+++ b/index.html
@@ -87,12 +87,8 @@
 
     </div>
 
-    <nameday-finder></nameday-finder>
-
-    <div class="thumbnail-container-event name-day-background thumbnail-container-background"
-         onclick="changeView('./app/-component/attendance.html')">
-        <span class="thumbnail-container-event-title ">Dnes meniny oslavuje </span>
-    </div>
+    <nameday-finder class="thumbnail-container-event name-day-background thumbnail-container-background"></nameday-finder>
+    
 </section>
 
 </body>
