UPDATE: pripravenie frontendu, zakladne preklikavanie, podrobnejsi navrh komponentu

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Exam</title>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <link href="style.css" rel="stylesheet">
     <link href="app/css/footer.css" rel="stylesheet">
     <link href="app/css/header.css" rel="stylesheet">
     <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
+    <link href="app/css/nameDayFinderComponent.css" rel="stylesheet">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -88,7 +91,7 @@
     </div>
 
     <nameday-finder class="thumbnail-container-event name-day-background thumbnail-container-background"></nameday-finder>
-    
+
 </section>
 
 </body>
