--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -4,17 +4,39 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Hra</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
+<!--    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
+<!--    <link rel="stylesheet" href="/resources/demos/style.css">-->
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
+    <script src="../js/jquery.ui.touch-punch.min.js"></script>
     <script src="../js/game.js"></script>
+
 
 
 </head>
 <body>
+<div class="end-game-modal-hidden" id="end-game-modal">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <p class="end-game-text">GRATULUJEME! Obrázok ste poskladali za:</p>
+                <p class="end-game-text" id="end-game-time">GRATULUJEME! Obrázok ste poskladali za:</p>
+                <button class="btn btn-success btn-lg btn-block" type="submit" onclick="deleteEndGameModal()">Zavrieť</button>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+</div>
 <nav class="navigation-bar">
     <ul class="navigation-bar-row">
         <li class="item"><a class="item-link" href="../../index.html">Domov</a></li>
@@ -27,24 +49,60 @@
 
 <section class="game-container">
     <div class="game-container-info cup-background">
-        <h1 class="game-container-info-title bold-max">Názov hry</h1>
+        <h1 class="game-container-info-title bold-max">Vitamín C</h1>
         <h2 class="game-container-info-name">Kristian<span class="bold-max"> Sokol</span></h2>
     </div>
 
     <div class="game-container-settings">
-        <button class="game-container-settings-button" id="start">Štart</button>
-        <button class="game-container-settings-button" id="reset">Reset</button>
-        <button class="game-container-settings-button" id="demo">Demo</button>
+        <button class="game-container-settings-button" id="start" onclick="startGame()">Štart</button>
+        <button class="game-container-settings-button" id="demo" onclick="turnOnDemo()">Demo</button>
         <span class="" id="time">00:00</span>
     </div>
 
 
-    <canvas class="game-container-canvas" height="500" id="game-canvas" width="1000">
-        <img alt="Game picture" height="500" id="game-image"
+
+
+    <div class="game-container-canvas" id="game-canvas">
+        <img alt="Game picture" height="500" id="game-sokol" class="game-container-canvas-image"
              src="../../app/assets/images/1000x500.png"
-             width="1000">
-    </canvas>
+             width="1000"/>
+        <div id="game-drop-left-background">
+            <img src="../../app/assets/images/sokol/10.png" height="500" width="239" id="game-image-left-background" alt="Ľavé pozadie"/>
+        </div>
+        <div id="game-drop-banana">
+            <img src="../../app/assets/images/sokol/01.png" height="444" width="300" id="game-image-banana" alt="Banán"/>
+        </div>
+        <div id="game-drop-tomatos">
+            <img src="../../app/assets/images/sokol/08.png" height="70" width="250" id="game-image-tomatos" alt="Paradajky"/>
+        </div>
+        <div id="game-drop-main-background">
+            <img src="../../app/assets/images/sokol/11.png" height="500" width="569" id="game-image-main-background" alt="Hlavné pozadie"/>
+        </div>
+        <div id="game-drop-blackberries">
+            <img src="../../app/assets/images/sokol/02.png" height="223" width="227" id="game-image-blackberries" alt="Čučoriedky"/>
+        </div>
+        <div id="game-drop-kiwi">
+            <img src="../../app/assets/images/sokol/04.png" height="102" width="132" id="game-image-kiwi" alt="Kivi"/>
+        </div>
+        <div id="game-drop-table">
+            <img src="../../app/assets/images/sokol/03.png" height="176" width="276" id="game-image-table" alt="Tabuľka vitamin C"/>
+        </div>
+        <div id="game-drop-cabbage">
+            <img src="../../app/assets/images/sokol/05.png" height="156" width="255" id="game-image-cabbage" alt="Kapusta"/>
+        </div>
+        <div id="game-drop-pepper">
+            <img src="../../app/assets/images/sokol/06.png" height="209" width="228" id="game-image-pepper" alt="Paprika"/>
+        </div>
+        <div id="game-drop-broccoli">
+            <img src="../../app/assets/images/sokol/07.png" height="207" width="249" id="game-image-broccoli" alt="Brokolica"/>
+        </div>
+        <div id="game-drop-right-background">
+            <img src="../../app/assets/images/sokol/09.png" height="500" width="267" id="game-image-right-background" alt="Prave pozadie"/>
+        </div>
+    </div>
 </section>
+
+
 </body>
 </html>
 
