--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -15,7 +15,7 @@
     <script src="../js/puzzle/piece/piece.js"></script>
     <script src="../js/puzzle/puzzle.js"></script>
     <script src="../js/canvas/dimension.js"></script>
-    <script src="../js/canvas/gameEngine.js"></script>
+    <script src="../js/canvas/engine/gameEngine.js"></script>
     <script defer src="../js/game.js"></script>
     <script src="https://unpkg.com/konva@7.0.3/konva.min.js"></script>
     <script crossorigin="anonymous"
