Vytvorený component TreeLevelMenu jeho css html a js. Vytvorená funkcia onLoad v index.js a zavolaná v index.html na event onLoad.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="app/js/index.js"></script>
+    <script src="app/three-level-menu/js/three-level-menu.component.js"></script>
 
 
 </head>
-<body>
+<body onload="onLoad()">
 
 
 <nav class="navigation-bar">
@@ -36,7 +37,6 @@
         <li class="item"><a class="item-link" href="#">Škola</a></li>
     </ul>
 </nav>
-
 
 <section class="thumbnail-container">
     <div class="thumbnail-container-game gamepad-background thumbnail-container-background"
