--- a/index.html
+++ b/index.html
@@ -27,16 +27,9 @@
 </head>
 <body onload="onLoad()">
 
+<three-level-menu>
 
-<nav class="navigation-bar">
-
-    <ul class="navigation-bar-row">
-        <li class="item item-active"><a class="item-link" href="./index.html">Domov</a></li>
-        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
-        <li class="item"><a class="item-link" href="#">Hry</a></li>
-        <li class="item"><a class="item-link" href="#">Škola</a></li>
-    </ul>
-</nav>
+</three-level-menu>
 
 <section class="thumbnail-container">
     <div class="thumbnail-container-game gamepad-background thumbnail-container-background"
