--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -10,7 +10,9 @@
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../breadcrumbs.css">
     <script src="../js/game.js"></script>
+    <script src="../../app/breadcrumbs/BreadcrumbsComponent.js"></script>
 
 
 </head>
@@ -26,6 +28,9 @@
 
 
 <section class="game-container">
+    <div class="breadcrumbs-container">
+        <breadcrumbs-component></breadcrumbs-component>
+    </div>
     <div class="game-container-info cup-background">
         <h1 class="game-container-info-title bold-max">Názov hry</h1>
         <h2 class="game-container-info-name">Kristian<span class="bold-max"> Sokol</span></h2>
