Pridané: + implementácia breadcrumbs do každej stránky
Upravené: breadcrumbs.css presunuté do app/css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="app/css/header.css" rel="stylesheet">
     <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
-    <link rel="stylesheet" href="breadcrumbs.css">
+    <link rel="stylesheet" href="app/css/breadcrumbs.css">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
