--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -10,7 +10,9 @@
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../app/css/breadcrumbs.css">
     <script src="../js/game.js"></script>
+    <script src="../../app/breadcrumbs/BreadcrumbsComponent.js"></script>
 
 
 </head>
@@ -24,7 +26,9 @@
     </ul>
 </nav>
 
-
+<div class="breadcrumbs-container">
+    <breadcrumbs-component></breadcrumbs-component>
+</div>
 <section class="game-container">
     <div class="game-container-info gamepad-background">
         <h1 class="game-container-info-title bold-max">Názov hry</h1>
