--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -10,7 +10,7 @@
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../breadcrumbs.css">
+    <link rel="stylesheet" href="../../app/css/breadcrumbs.css">
     <script src="../js/game.js"></script>
     <script src="../../app/breadcrumbs/BreadcrumbsComponent.js"></script>
 
