Pridané: + pridane print.css v pričinku app/css ktoré slúži na prispôsobenie stránky pre tlač + každá stránka prispôsobená pre tlač - v každej stránke pridané print.css a prislušná class na odstranenie prvku pri tlači

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="app/css/header.css" rel="stylesheet">
     <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
+    <link rel="stylesheet" href="app/css/print.css">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -27,7 +28,7 @@
 <body>
 
 
-<nav class="navigation-bar">
+<nav class="navigation-bar no-print">
 
     <ul class="navigation-bar-row">
         <li class="item item-active"><a class="item-link" href="./index.html">Domov</a></li>
