--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -10,12 +10,13 @@
     <link href="../../app/css/header.css" rel="stylesheet">
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../app/css/print.css">
     <script src="../js/game.js"></script>
 
 
 </head>
 <body>
-<nav class="navigation-bar">
+<nav class="navigation-bar no-print">
     <ul class="navigation-bar-row">
         <li class="item"><a class="item-link" href="../../index.html">Domov</a></li>
         <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
