--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, height=device-height initial-scale=1" name="viewport">
+    <meta content="width=device-width, height=device-height, initial-scale=1" name="viewport">
     <title>My little pony</title>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
